--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,8 +15,8 @@ set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
 set -s focus-events on
 
-set -g prefix2 C-a                        # GNU-Screen compatible prefix
-bind C-a send-prefix -2
+set -g prefix2 C-x                        # GNU-Screen compatible prefix
+bind C-x send-prefix -2
 
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
 setw -q -g utf8 on
@@ -46,7 +46,7 @@ set -g display-time 1000      # slightly longer status messages display time
 set -g status-interval 10     # redraw status line every 10 seconds
 
 # clear both screen and history
-bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
+bind -n C-l send-keys C-l
 
 # activity
 set -g monitor-activity on
