add nvim dot file

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,6 +67,15 @@ bind - split-window -v
 bind _ split-window -h
 
 # pane navigation
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
+bind-key -n M-left  if-shell  "$is_vim"  "send-keys M-left"  "select-pane -L"
+bind-key -n M-down  if-shell  "$is_vim"  "send-keys M-down"   "select-pane -D"
+bind-key -n M-up  if-shell  "$is_vim"  "send-keys M-up"  "select-pane -U"
+bind-key -n M-right   if-shell  "$is_vim"  "send-keys M-right"   "select-pane -R"
+bind-key -n M-\   if-shell  "$is_vim"  "send-keys M-\\"  "select-pane -l"
+
 bind -r h select-pane -L  # move left
 bind -r j select-pane -D  # move down
 bind -r k select-pane -U  # move up
@@ -82,6 +91,10 @@ bind -r H resize-pane -L 2
 bind -r J resize-pane -D 2
 bind -r K resize-pane -U 2
 bind -r L resize-pane -R 2
+bind-key M-j resize-pane -D
+bind-key M-k resize-pane -U
+bind-key M-h resize-pane -L
+bind-key M-l resize-pane -R
 
 # window navigation
 unbind n
