--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,7 +64,7 @@ bind C-f command-prompt -p find-session 'switch-client -t %%'
 # split current window horizontally
 bind - split-window -v
 # split current window vertically
-bind _ split-window -h
+bind | split-window -h
 
 # pane navigation
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -99,9 +99,15 @@ bind-key M-l resize-pane -R
 # window navigation
 unbind n
 unbind p
-bind -r C-h previous-window # select previous window
-bind -r C-l next-window     # select next window
+#bind -r C-h previous-window # select previous window
+#bind -r C-l next-window     # select next window
+bind -n S-Right next-window
+bind -n S-Left previous-window
 bind Tab last-window        # move to last active window
+
+# move windows
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
 
 # toggle mouse
 bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
