--- a/.tmux.conf
+++ b/.tmux.conf
@@ -76,6 +76,11 @@ bind-key -n M-up  if-shell  "$is_vim"  "send-keys M-up"  "select-pane -U"
 bind-key -n M-right   if-shell  "$is_vim"  "send-keys M-right"   "select-pane -R"
 bind-key -n M-\   if-shell  "$is_vim"  "send-keys M-\\"  "select-pane -l"
 
+bind-key -n M-h  if-shell  "$is_vim"  "send-keys M-left"  "select-pane -L"
+bind-key -n M-j  if-shell  "$is_vim"  "send-keys M-down"   "select-pane -D"
+bind-key -n M-k  if-shell  "$is_vim"  "send-keys M-up"  "select-pane -U"
+bind-key -n M-l   if-shell  "$is_vim"  "send-keys M-right"   "select-pane -R"
+
 bind -r h select-pane -L  # move left
 bind -r j select-pane -D  # move down
 bind -r k select-pane -U  # move up
