--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,7 +64,7 @@ bind C-f command-prompt -p find-session 'switch-client -t %%'
 # split current window horizontally
 bind - split-window -v
 # split current window vertically
-bind | split-window -h
+bind _ split-window -h
 
 # pane navigation
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -79,7 +79,7 @@ bind-key -n M-\   if-shell  "$is_vim"  "send-keys M-\\"  "select-pane -l"
 bind-key -n M-h  if-shell  "$is_vim"  "send-keys M-left"  "select-pane -L"
 bind-key -n M-j  if-shell  "$is_vim"  "send-keys M-down"   "select-pane -D"
 bind-key -n M-k  if-shell  "$is_vim"  "send-keys M-up"  "select-pane -U"
-bind-key -n M-l   if-shell  "$is_vim"  "send-keys M-right"   "select-pane -R"
+bind-key -n M-right   if-shell  "$is_vim"  "send-keys M-right"   "select-pane -R"
 
 bind -r h select-pane -L  # move left
 bind -r j select-pane -D  # move down
