add hjkl for resizing

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -92,14 +92,10 @@ bind < swap-pane -U       # swap current pane with the previous one
 bind + run 'cut -c3- ~/.tmux.conf | sh -s _maximize_pane "#{session_name}" #D'
 
 # pane resizing
-bind -r H resize-pane -L 2
-bind -r J resize-pane -D 2
-bind -r K resize-pane -U 2
-bind -r L resize-pane -R 2
-bind-key M-j resize-pane -D
-bind-key M-k resize-pane -U
-bind-key M-h resize-pane -L
-bind-key M-l resize-pane -R
+bind -r M-j resize-pane -D 2
+bind -r M-k resize-pane -U 2
+bind -r M-h resize-pane -L 2
+bind -r M-l resize-pane -R 2
 
 # window navigation
 unbind n
